# market-notification

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
config/: default.toml  filter_rules.json  filter_rules.json.example
docs/: CONTEXT.md  HANDOVER.md  PLAN.md  QUESTIONS.md  SHADOW_MODE.md  SPEC.md  STATUS.md  VERIFICATION.md  architecture.md  design-decisions.md
docs/notes/: c1_orchestrator_audit.md
docs/sessions/: S1_market-notification-system-design_2026-05-07.md  S1_phase-7-pdf-pipeline_2026-05-07.md  S1_phase5-taxonomy-gemma-classifier_2026-05-07.md  S2_Phase 2 Exchange Fetchers and Phase 3 Poller_2026-05-07.md  S2_phase6-priority-engine_2026-05-07.md  S3_Phase 4 Junk Filter_2026-05-07.md  S4_phase8-gemma-summarizer_2026-05-09.md
scripts/: _b35_smoke.py  _dump_schema.py  _inspect_brain_db.py  _inspect_brain_tables.py  _phase1_smoke.py  _phase2_smoke.py  _phase3_smoke.py  _phase4_smoke.py  _phase5_live_classify.py  _phase5_smoke.py  _phase6_smoke.py  _phase7_smoke.py  _phase8_live.py  _phase8_smoke.py  _run_all_smoke.py  _shadow_preflight.py  backup_db.py  bootstrap_db.py  logs_rollup.py  push_important.py  run_all.py  run_poller.py  run_ui.py  run_workers.py  seed_filter_rules.py  watch_health.py
src/market_notification/attachments/: base.py  deferred_tagger.py  downloader.py  gemma_vision_extractor.py  link_resolver.py  pdfplumber_extractor.py  service.py
tests/: conftest.py
tests/integration/: test_fetchers_smoke.py  test_filter_seed_and_poller.py  test_poller_short_run.py
tests/unit/: test_attachment_downloader.py  test_attachment_service.py  test_classifier_llm.py  test_classifier_prompt.py  test_company_provider.py  test_cross_exchange.py  test_db_models.py  test_dedup.py  test_deferred_tagger.py  test_filter_engine.py  test_gemma_vision_extractor.py  test_link_resolver.py  test_normalizer.py  test_pdfplumber_extractor.py  test_priority_deterministic.py  test_priority_llm_override.py  test_priority_rubric.py  test_priority_service.py  test_priority_thresholds.py  test_sla_monitor.py  test_summarizer_gemma.py  test_summarizer_prompt.py  test_summarizer_queue_retry.py  test_summarizer_schema.py  test_taxonomy.py
verification/: README.md
(+45 files in other folders)
